[package]
name = "ejlv_builder"
version = "0.1.0"
edition = "2024"

[dependencies]
ej-builder-sdk = "0.5.0"
num_cpus = "1.17.0"
tokio = { version = "1.44.2", features = [
	"macros",
	"rt-multi-thread",
	"process",
	"fs",
] }
thiserror = "2.0.12"
tracing-subscriber = "0.3.19"
tracing = "0.1.41"
tokio-serial = "5.4.1"
reqwest = "0.12.24"
serde_json = "1.0.145"
